Finish the work experience section

--- a/index.html
+++ b/index.html
@@ -82,30 +82,38 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="June 2015 – Present">
+                <h3>PrintFirm</h3>
+                <h4>Project Manager / Tech Lead</h4>
+                <ul>
+                  <li> Full-stack management of web servers</li>
+                  <li> Management and hiring of software developers</li>
+                  <li> Create docker containers for modern workflows</li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="June 2014 – June 2015">
+                <h3>PrintFirm</h3>
+                <h4>Assistant Manager</h4>
+                <ul>
+                    <li> Consultant for every major decision made</li>
+                    <li> Improve tech in-house</li>
+                    <li> Improve company workflow for every departmant</li>
+                </ul>
             </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            
+            <div data-date="Middle School – Present">
+                <h3>Freelancer</h3>
+                <ul>
+                  <li> Custom Android OS Development / Device Rooting</li>
+                  <li> Migrated various companies to various Cloud solutions</li>
+                  <ul>
+                    <li> G Suite (previously Google Apps), Office 365</li>
+                    <li> Digital Ocean, Linode, AWS</li>
+                  </ul>
+                </ul>
             </div>
-        </div>
+       </div>
     </div>
     <!-- End #experience -->
 
@@ -118,24 +126,6 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
         </div>
         <!-- End .education-block -->
     </div>
