--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/partounian@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -206,7 +206,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2017 Patrick Artounian 
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -217,19 +217,7 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://github.com/partounian"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
