Add PrintFirm redesign as project

--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/printfirm-redesign.png" alt="PrintFirm Redesign" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>PrintFirm Redesign & Infrastructure Revamp</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                          I managed PrintFirm's overall redesign, while personally working on upgrading our outdated LAMP server stack to a new LEMP stack which I keep constantly monitored with various services. I have also implemented a secondary staging website for dev work and infrastructure update testing before pushing to our production servers.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://www.printfirm.com/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
