--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/coogle.png" alt="Coogle" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Coogle</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                          Keep your searches simple, and sweet with Coogle. It is simply a "Clickbait-less" Google search. 
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https:\\partounian.github.io/coogle/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
