--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 </head>
 
 <body>
-    <div id="mobile-menu-open" class="shadow-large">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-    </div>
+    <button id="mobile-menu" class="shadow-large" type="button">
+        <span id="mobile-menu-box">
+            <span id="mobile-menu-inner"></span>
+        </span>
+    </button>
     <!-- End #mobile-menu-toggle -->
-    <header>
-        <div id="mobile-menu-close">
-            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-        </div>
+    <nav>
+        <!-- <div id="mobile-menu-close"> -->
+        <!--     <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i> -->
+        <!-- </div> -->
         <ul id="menu" class="shadow">
             <li>
                 <a href="#about">About</a>
@@ -38,8 +40,8 @@
                 <a href="#contact">Contact</a>
             </li>
         </ul>
-    </header>
-    <!-- End header -->
+    </nav>
+    <!-- End nav -->
 
     <div id="lead">
         <div id="lead-content">
