--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 </head>
 
 <body>
-    <button id="mobile-menu" class="shadow-large" type="button">
-        <span id="mobile-menu-box">
-            <span id="mobile-menu-inner"></span>
-        </span>
-    </button>
+    <div id="mobile-menu-open" class="shadow-large">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
     <!-- End #mobile-menu-toggle -->
-    <nav>
-        <!-- <div id="mobile-menu-close"> -->
-        <!--     <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i> -->
-        <!-- </div> -->
+    <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+        </div>
         <ul id="menu" class="shadow">
             <li>
                 <a href="#about">About</a>
@@ -40,8 +38,8 @@
                 <a href="#contact">Contact</a>
             </li>
         </ul>
-    </nav>
-    <!-- End nav -->
+    </header>
+    <!-- End header -->
 
     <div id="lead">
         <div id="lead-content">
