Added more skills

--- a/index.html
+++ b/index.html
@@ -158,11 +158,13 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>Python</li>
+            <li>PHP</li>
             <li>JavaScript</li>
             <li>Node.js</li>
-            <li>Meteor.js</li>
-            <li>Java</li>
-            <li>C++</li>
+            <li>Docker</li>
+            <li>LAMP/LEMP stack</li>
+            <li>Linux Distro System Admin</li>
+            <li>UX Design &amp; Research</li>
             <li>HTML5</li>
             <li>CSS3</li>
             <li>Bootstrap</li>
