--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       My passion in life is to get things done and be happy while doing them. Going through a hardship of some kind does not mean it has to keep you down, having a problem with your program doesn't mean you should give and not seeing progress in your hobby does not mean it is time to stop. I live to learn so that I have an idea of any and all work related to me. I love to learn from readings of all kinds, and to fasten that learning in with experience.
+                       My passion in life is to get things done and be happy while doing them. Going through a hardship of some kind does not mean it has to keep you down, having a problem with your program doesn't mean you should give up and not seeing progress in your hobby does not mean it is time to stop. I live to learn so that I have an idea of any and all work related to me. I love to learn from readings of all kinds, and to fasten that learning in with experience.
                     </p>
                 </div>
             </div>
