Add Selenium to skills

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <li>Docker</li>
             <li>LAMP/LEMP stack</li>
             <li>Linux Distro System Admin</li>
+            <li>Selenium</li>
             <li>UX Design &amp; Research</li>
             <li>HTML5</li>
             <li>CSS3</li>
