--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>PrintFirm Redesign & Infrastructure Revamp</h3>
+                        <h3>PrintFirm Redesign &amp; Infrastructure Revamp</h3>
                         <p>
                           I managed PrintFirm's overall redesign, while personally working on upgrading our outdated LAMP server stack to a new LEMP stack which I keep constantly monitored with various services. I have also implemented a secondary staging website for dev work and infrastructure update testing before pushing to our production servers.
                         </p>
@@ -163,13 +163,12 @@
             <li>Node.js</li>
             <li>Docker</li>
             <li>LAMP/LEMP stack</li>
-            <li>Linux Distro System Admin</li>
+            <li>Linux System Admin</li>
             <li>Selenium</li>
             <li>UX Design &amp; Research</li>
             <li>HTML5</li>
             <li>CSS3</li>
-            <li>Bootstrap</li>
-            <li>Semantic UI</li>
+            <li><a href="https://hpbn.co/">Modern Web Performance</a></li>
         </ul>
     </div>
     <!-- End #skills -->
