--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </ul>
             </div>
             
-            <div data-date="June 2015 – Present">
+            <div data-date="June 2015 – May 2017">
                 <h3>PrintFirm</h3>
                 <h4>Project Manager / Tech Lead</h4>
                 <ul>
