--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       My passion in life is to get things done and I'm addicted to learning and applying knowledge. My specialty is optimization, making sure a server stack is cost-efficient, fast, scalable and secure. I have worked with many different languages and all paradigms (Procedural, OOP, and Functional), and am currently trying to expand my knowledge of the modern <a href="https://mesosphere.com/blog/smack-stack-new-lamp-stack/" target="_blank" rel="noopener">SMACK stack</a>.
+                       My passion in life is to get things done and I'm addicted to learning and applying knowledge. My specialty is optimization, making sure a server stack is cost-efficient, fast, scalable and secure. I have worked with many different languages and paradigms (Procedural, OOP, and Functional), and currently trying to expand my knowledge of the modern <a href="https://mesosphere.com/blog/smack-stack-new-lamp-stack/" target="_blank" rel="noopener">SMACK stack</a>.
                     </p>
                 </div>
             </div>
@@ -184,8 +184,9 @@
             <li>Docker</li>
             <li>LAMP/LEMP stack</li>
             <li>Linux System Admin</li>
+            <li>Vim/Neovim</li>
             <li>Selenium</li>
-            <li>UX Design &amp; Research</li>
+            <li>UX Design</li>
             <li>HTML5</li>
             <li>CSS3</li>
             <li><a href="https://hpbn.co/">Modern Web Performance</a></li>
