--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 <h4>Software Engineer</h4>
                 <ul>
                   <li> Embedded Application Developer</li>
-                  <li> Server Software Architect</li>
-                  <li> UX Designer</li>
+                  <li> Toolchain Developer</li>
                 </ul>
             </div>
             
@@ -179,17 +178,16 @@
         <ul>
             <li>Python</li>
             <li>PHP</li>
-            <li>JavaScript</li>
+            <li>WordPress/Trellis stack</li>
             <li>Node.js</li>
             <li>Docker</li>
             <li>LAMP/LEMP stack</li>
             <li>Linux System Admin</li>
-            <li>Vim/Neovim</li>
+            <li>Rest API Testing</li>
             <li>Selenium</li>
             <li>UX Design</li>
             <li>HTML5</li>
             <li>CSS3</li>
-            <li><a href="https://hpbn.co/">Modern Web Performance</a></li>
         </ul>
     </div>
     <!-- End #skills -->
