--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       My passion in life is to get things done and I'm addicted to learning and applying knowledge. My specialty is optimization, making sure a server stack is cost-efficient, fast, scalable and secure. I'm currently open for part-time/on-demand freelance work.
+                       My passion in life is to get things done right. I'm addicted to learning and applying knowledge. My specialty is optimization, making sure a server stack is cost-efficient, fast, scalable and secure. 
                     </p>
                 </div>
             </div>
@@ -84,8 +84,19 @@
                 <h3><a href="http://www.embodied.me/">Embodied</a></h3>
                 <h4>Software Engineer</h4>
                 <ul>
-                  <li> Embedded Application Developer</li>
-                  <li> Toolchain Developer</li>
+                  <li> DevOps</li>
+                  <li> Web Development</li>
+                  <li> Toolchain Development</li>
+                </ul>
+            </div>
+            
+            <div data-date="July 2017 – Present">
+                <h3><a href="https://www.unity.travel/">Unity Travel</a></h3>
+                <h4>Head of Engineering</h4>
+                <ul>
+                  <li> Managing marketing WP site, shopping Rails site</li>
+                  <li> Interal processs management</li>
+                  <li> Working with the team to make sure festivals are run smoothly</li>
                 </ul>
             </div>
             
@@ -93,7 +104,7 @@
                 <h3>Freelance</h3>
                 <h4>Software Developer / Consultant</h4>
                 <ul>
-                  <li> Full-Stack LEMP Performance Engineer</li>
+                  <li> Full-Stack LEMP Performance Optimization</li>
                   <li> WordPress Developer/System Admin</li>
                   <li> Misc system admin work</li>
                 </ul>
@@ -105,7 +116,7 @@
                 <ul>
                   <li> Full-stack management of web servers</li>
                   <li> Management and hiring of software developers</li>
-                  <li> Create docker containers for modern workflows</li>
+                  <li> Created docker containers for modern workflows</li>
                 </ul>
             </div>
 
@@ -140,22 +151,6 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/coogle.png" alt="Coogle" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Coogle</h3>
-                        <p>
-                          Keep your searches simple, and sweet with Coogle. It is simply a "Clickbait-less" Google search. 
-                        </p>
-                        <a href="https:\\partounian.github.io/coogle/">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
                         <img src="images/printfirm-redesign.png" alt="PrintFirm Redesign" />
                     </div>
                     <!-- End .project-image -->
@@ -175,20 +170,27 @@
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Main Skills</h2>
         <ul>
             <li>Python</li>
-            <li>PHP</li>
-            <li>WordPress/Trellis stack</li>
-            <li>Node.js</li>
-            <li>Docker</li>
-            <li>LAMP/LEMP stack</li>
             <li>Linux System Admin</li>
-            <li>Rest API Testing</li>
+            <li>Ansible</li>
+            <li>Automated Testing</li>
+            <li>Jenkins</li>
+            <li>Docker</li>
+            <li>PHP</li>
+            <li>WordPress/<a href="https://github.com/roots/trellis">Trellis</a> stack</li>
+            <li>MySQL/MariaDB</li>
+        </ul>
+        <h2 class="heading">Some Experience With</h2>
+        <ul>
+            <li>Ruby (Rails)</li>
+            <li>C#</li>
+            <li>Scala</li>
+            <li>Go</li>
+            <li>Java</li>
             <li>Selenium</li>
-            <li>UX Design</li>
-            <li>HTML5</li>
-            <li>CSS3</li>
+            <li>Postgres</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -212,7 +214,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 Patrick Artounian 
+                        Copyright &copy; 2018 Patrick Artounian 
                     </p>
                 </div>
                 <div class="col-sm-2 top">
