--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
             
             <div data-date="June 2015 – May 2017">
-                <h3>PrintFirm</h3>
+                <h3><a href="https://www.printfirm.com/">PrintFirm</a></h3>
                 <h4>Project Manager / Tech Lead</h4>
                 <ul>
                   <li> Full-stack management of web servers</li>
@@ -121,7 +121,7 @@
             </div>
 
             <div data-date="June 2014 – June 2015">
-                <h3>PrintFirm</h3>
+                <h3><a href="https://www.printfirm.com/">PrintFirm</a></h3>
                 <h4>Assistant Manager</h4>
                 <ul>
                     <li> Consultant for every major decision made</li>
