--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
         </ul>
         <h2 class="heading">Some Experience With</h2>
         <ul>
+            <li>AWS</li>
             <li>Ruby (Rails)</li>
             <li>C#</li>
             <li>Scala</li>
